--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/BSick7/minerva",
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-qunit": "~0.4.0",
     "grunt-typescript": "~0.3.0"
