--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   ],
   "description": "Microservices Pipeline Presentation framework",
   "keywords": [
+    "build",
     "minerva",
     "fayde",
     "xaml",
