--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-qunit": "~0.4.0",
+    "grunt-contrib-symlink": "^0.3.0",
     "grunt-typescript": "~0.3.0"
   }
 }
