Setting up stress test scaffold.

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "tests"
   ],
   "devDependencies": {
-    "qunit": "~1.15.0"
+    "qunit": "~1.15.0",
+    "requirejs": "~2.1.15",
+    "requirejs-text": "~2.0.12"
   }
 }
