--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   },
   "homepage": "https://github.com/BSick7/minerva",
   "devDependencies": {
+    "connect-livereload": "^0.5.0",
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-symlink": "^0.3.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-open": "^0.2.3",
     "grunt-typescript": "~0.3.0"
   }
 }
