--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minerva",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Microservices Pipeline Presentation framework",
   "main": "Gruntfile.js",
   "directories": {
@@ -31,6 +31,7 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-symlink": "^0.3.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-open": "^0.2.3",
     "grunt-typescript": "~0.3.0"
