--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "minerva",
-  "main": "minerva.js",
-  "version": "0.4.1",
+  "main": "dist/minerva.js",
+  "version": "0.4.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/bsick7/minerva"
