--- a/bower.json
+++ b/bower.json
@@ -33,5 +33,8 @@
     "qunit": "~1.15.0",
     "requirejs": "~2.1.15",
     "requirejs-text": "~2.0.12"
+  },
+  "dependencies": {
+    "perfex": "~0.1.0"
   }
 }
