--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "connect-livereload": "^0.5.0",
     "grunt": "~0.4.4",
+    "grunt-bower-install-simple": "^1.1.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-qunit": "~0.4.0",
@@ -34,6 +35,9 @@
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-open": "^0.2.3",
-    "grunt-typescript": "~0.3.0"
+    "grunt-typescript": "~0.4.0",
+    "grunt-version-ts": "^0.1.0",
+    "grunt-fayde-unify": "~0.4.0",
+    "fayde-unify": "~0.4.0"
   }
 }
