--- a/package.json
+++ b/package.json
@@ -25,19 +25,23 @@
   },
   "homepage": "https://github.com/BSick7/minerva",
   "devDependencies": {
-    "connect-livereload": "^0.5.0",
     "fayde-unify": "~0.4.0",
-    "grunt": "~0.4.4",
-    "grunt-bower-install-simple": "^1.1.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-qunit": "~0.4.0",
-    "grunt-contrib-symlink": "^0.3.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-fayde-unify": "~0.4.0",
-    "grunt-open": "^0.2.3",
-    "grunt-typescript": "~0.6.1",
-    "grunt-version-ts": "^0.1.0"
+    "glob": "^5.0.5",
+    "gulp": "^3.8.11",
+    "gulp-bower": "0.0.10",
+    "gulp-bump": "^0.3.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-connect": "^2.2.0",
+    "gulp-open": "^0.3.2",
+    "gulp-qunit": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-symlink": "^2.1.0",
+    "gulp-tsc": "^0.9.4",
+    "gulp-uglify": "^1.2.0",
+    "merge2": "^0.3.3",
+    "run-sequence": "^1.0.2",
+    "typescript": "^1.4.1",
+    "version-ts": "^0.1.1"
   }
 }
