--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "connect-livereload": "^0.5.0",
     "fayde-unify": "~0.4.0",
     "grunt": "~0.4.4",
+    "grunt-blanket-qunit": "^0.2.0",
     "grunt-bower-install-simple": "^1.1.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
