--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "gulp-uglify": "^1.2.0",
     "merge2": "^0.3.3",
     "run-sequence": "^1.0.2",
-    "typescript": "^1.4.1",
+    "typescript": "^1.5.0-beta",
     "version-ts": "^0.1.1"
   }
 }
