--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/BSick7/minerva",
   "devDependencies": {
+    "del": "^1.2.0",
     "fayde-unify": "~0.4.0",
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-bower": "0.0.10",
     "gulp-bump": "^0.3.0",
-    "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-open": "^0.3.2",
     "gulp-qunit": "^1.2.1",
@@ -41,7 +41,6 @@
     "gulp-uglify": "^1.2.0",
     "merge2": "^0.3.3",
     "run-sequence": "^1.0.2",
-    "typescript": "^1.5.0-beta",
     "version-ts": "^0.1.1"
   }
 }
